deleted id about background image

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h2{
     background-repeat: no-repeat;
     background-size: cover;
     height: 150vh;
-    background-image: url("https://bit.ly/35GBA5T");
+    background-color: snow;;
 }
 P{
     font-size:20PX;
