changed background color for about to purple

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h2{
     background-repeat: no-repeat;
     background-size: cover;
     height: 150vh;
-    background-color: snow;;
+    background-color: purple;
 }
 P{
     font-size:20PX;
