changed button hover color to royal blue

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ input {
   }
   button:hover{
       background-color:purple;
-      color: yellow;
+      color: royalblue;
   }
 #footer{
     font-size: 40px;
